TEST_PROGRAMS/typing_benchmarks/invalid/assign_fun3.go
package main

func g() {}

func h() {}

func main() {
	g = h
}
